--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,27 +1,27 @@
 version: '3'
 services:
   db:
-    image: mysql:5.7
+    image: mysql:9.0.0
     container_name: Substitutes_DB
     restart: unless-stopped
     volumes:
-      - data:/var/lib/mysql
+      - ./data/conf.d:/etc/mysql/conf.d
+      - ./data/logs:/logs
+      - /usr/local/var/mysql:/var/lib/mysql
     environment:
-      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
-      MYSQL_DATABASE: ${MYSQL_DATABASE}
-      MYSQL_USER: ${MYSQL_USER}
-      MYSQL_PASSWORD: ${MYSQL_PASSWORD}
+      MYSQL_ROOT_PASSWORD: ${DB_ROOT_PASSWORD}
+      MYSQL_DATABASE: subs
+      MYSQL_USER: ${DB_USER}
+      MYSQL_PASSWORD: ${DB_PASSWORD}
     ports:
-      - "3306:3306"
+      - "3303:3306"
     healthcheck:
       test: ["CMD", "mysql", "-h", "localhost", "-u", "root", "-p${DB_ROOT_PASSWORD}", "-e", "SELECT 1"]
       timeout: 20s
       retries: 10
 
   backend:
-    build:
-      context: .
-      dockerfile: Dockerfile
+    image: mouseylicense/substitutes:1
     container_name: Substitutes_backend
     command: sh -c "python3 manage.py migrate --noinput && python3 manage.py collectstatic --noinput && python manage.py runserver 0.0.0.0:5858"
     restart: unless-stopped
@@ -32,7 +32,7 @@ services:
     env_file:
       - .env
     depends_on:
-      - db:
+      db:
         condition: service_healthy
 volumes:
   data:
