--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -21,7 +21,7 @@ services:
       retries: 10
 
   backend:
-    image: mouseylicense/substitutes:2
+    image: mouseylicense/substitutes:v3
     container_name: Substitutes_backend
     restart: unless-stopped
     ports:
