updated docker setup

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -22,6 +22,8 @@ services:
 
   backend:
     image: mouseylicense/substitutes:v3
+    command:
+      - sh -c python3 manage.py migrate --noinput && python3 manage.py collectstatic --noinput
     container_name: Substitutes_backend
     restart: unless-stopped
     ports:
