--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,7 +7,7 @@ services:
     volumes:
       - ./data/conf.d:/etc/mysql/conf.d
       - ./data/logs:/logs
-      - /usr/local/var/mysql:/var/lib/mysql
+      - ./data/usr/local/var/mysql:/var/lib/mysql
     environment:
       MYSQL_ROOT_PASSWORD: ${DB_ROOT_PASSWORD}
       MYSQL_DATABASE: subs
@@ -21,7 +21,7 @@ services:
       retries: 10
 
   backend:
-    image: mouseylicense/substitutes:v3
+    image: mouseylicense/substitutes:v3.03
     container_name: Substitutes_backend
     restart: unless-stopped
     ports:
