--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 Django==4.2.13
 python-dotenv==1.0.1
-mysqlclient>=2.2.1
-daphne>=4.1.2
-uuid>=1.30
+mysqlclient==2.2.1
+daphne==4.1.2
+uuid==1.30
+reportlab==4.2.2
